# Lonk

./: CMakeLists.txt  Lonk.py  Plonk.py  README.md  Regulator.py  heading_w_observer.py  re_addressing_read_sensor.py  re_addressing_read_sensor_sens41_init_error.py  sphero_thread.py  timer.py
0.1/: .fw  Thread_async.py  Thread_async2.py  Thread_async2_heading.py  centered_wall_avoid.py  drive.py  drive2.py  heading_w_observer.py  single_sens_drive.py  single_sens_drive2.py  single_sens_drive3.py  single_sensor.py  wall_detect.py
0.2/: heading_w_observer.py  re_addressing_read_sensor.py
cmake/: conan.cmake
controller/include/: controller.hpp  system_timer.hpp
controller/src/: controller.cpp  system_timer.cpp
include/camera/: camera.hpp  detect_face.hpp
include/controller/: big_brain.hpp  controller.hpp  path_finder.hpp  system_timer.hpp
include/data_parsing/: json.hpp  received_data.hpp
include/other/: camera.hpp  json.hpp  wasd_controller.hpp
include/tcp/: network_helper.hpp  tcp_client.hpp
include/test/: tcp_client.hpp
main_files/: CMakeLists.txt  find_farge_kamera.cpp  main.cpp  py_tcp_server.py  recieve_pic_from_Lonk.cpp  test.cpp  wasd_controller.cpp  webcam.cpp
python/: Plonk.py  py_tcp_server.py  re_addressing_read_sensor.py
src/: CMakeLists.txt  big_brain.cpp  controller.cpp  path_finder.cpp  system_timer.cpp  wasd_controller.cpp
tcp/: CMakeLists.txt  Plonk.py  main.cpp  py_tcp_server.py  tcp_client.cpp
